--- a/config/.env
+++ b/config/.env
@@ -1,5 +1,5 @@
-DB_HOST=172.10.0.4
-DB_PORT=5432
+DB_HOST=viaduct.proxy.rlwy.net
+DB_PORT=42935
 DB_USER=postgres
-DB_PASSWORD=3335
-DB_NAME=quiz3
+DB_PASSWORD=gbuGlaDjEclWrAkmrIixBPohTfPonDMx
+DB_NAME=railway
